src/test/ui/async-await/await-keyword/2015-edition-error-various-positions.stderr
error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:5:13
   |
LL |     pub mod await {
   |             ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
note: the lint level is defined here
  --> $DIR/2015-edition-error-various-positions.rs:2:9
   |
LL | #![deny(keyword_idents)]
   |         ^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:7:20
   |
LL |         pub struct await;
   |                    ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:11:16
   |
LL | use outer_mod::await::await;
   |                ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:11:23
   |
LL | use outer_mod::await::await;
   |                       ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:16:14
   |
LL | struct Foo { await: () }
   |              ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:20:15
   |
LL | impl Foo { fn await() {} }
   |               ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:24:14
   |
LL | macro_rules! await {
   |              ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:31:5
   |
LL |     await!();
   |     ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:34:11
   |
LL |     match await { await => {} }
   |           ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `await` is a keyword in the 2018 edition
  --> $DIR/2015-edition-error-various-positions.rs:34:19
   |
LL |     match await { await => {} }
   |                   ^^^^^ help: you can use a raw identifier to stay compatible: `r#await`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: aborting due to 10 previous errors

